// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextAreaInput /> should have some hintText 1`] = `
<div
  class="root"
>
  <div
    class="notchedBase"
  >
    <div
      class="inputWrapper"
    >
      <textarea
        autocomplete="off"
        class="input"
        id="id"
      />
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
          for="id"
        >
          placeholder
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
  <p
    class="root sizeScale2 alignLeft hintText"
  >
    hint text
  </p>
</div>
`;

exports[`<TextAreaInput /> should match snapshot 1`] = `
<div
  class="root"
>
  <div
    class="notchedBase"
  >
    <div
      class="inputWrapper"
    >
      <textarea
        autocomplete="off"
        class="input"
        id="id"
      />
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
          for="id"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when active 1`] = `
<div
  class="root input-class"
>
  <div
    class="notchedBase notchedBaseShift notchedBaseActive"
  >
    <div
      class="inputWrapper"
    >
      <textarea
        autocomplete="off"
        class="input"
      >
        value from the tests
      </textarea>
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 16px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when touched 1`] = `
<div
  class="root input-class"
>
  <div
    class="notchedBase"
  >
    <div
      class="inputWrapper"
    >
      <textarea
        autocomplete="off"
        class="input"
      />
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="root input-class invalid withStatus"
>
  <div
    class="notchedBase"
  >
    <div
      class="inputWrapper"
    >
      <textarea
        autocomplete="off"
        class="input"
      />
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when touched and valid 1`] = `
<div
  class="root input-class valid withStatus"
>
  <div
    class="notchedBase"
  >
    <div
      class="inputWrapper"
    >
      <textarea
        autocomplete="off"
        class="input"
      />
    </div>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;
